[project]
name = "echo-harvest"
version = "0.1.0"
description = "A PlayerCTL monitoring software"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.6.0",
    "async-timeout==4.0.3",
    "greenlet==3.0.3",
    "humanfriendly==10.0",
    "msgspec==0.18.6",
    "nanoid==2.0.0",
    "pillow==10.2.0",
    "psycopg2==2.9.9",
    "pycairo==1.26.0",
    "pydantic==2.6.4",
    "pydantic-core==2.16.3",
    "pygobject==3.48.1",
    "pyright>=1.1.391",
    "redis==5.0.3",
    "sqlalchemy==2.0.29",
    "tk==0.1.0",
    "typing-extensions==4.11.0",
    "websockets>=14.1",
]
